--- a/test.html
+++ b/test.html
@@ -8,5 +8,7 @@
     <p>
       <a href="agmapp://test" data-mce-href="agmapp://test" data-mce-selected="inline-boundary">agmapp://test</a>
     </p>
+    <a href="http://www.example.com/stuff.html#sec7">Foo bar</a>
+    <a href="agmapp://test">Foo baaaar</a>
   </body>
 </html>
